test layout object-not finish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
                     <a class="nav-link font-fam" data-toggle="tab" href="#about-healthy" [routerLink]="['/healthy']">Web
                         about healthy</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link font-fam" data-toggle="tab" href="#about-healthy" [routerLink]="['/test']">testres</a>
+                </li>
             </ul>
         </div>
     </div>
