--- a/src/app/forecast/forecast.component.scss
+++ b/src/app/forecast/forecast.component.scss
@@ -105,3 +105,10 @@ $border-radius: 1rem;
 		}
   }
 }
+
+// --------------------------------------------------------------------------------------------------------
+.row::after {
+  content: "";
+  clear: both;
+  display: block;
+}
