--- a/src/app/healthy/healthy.component.html
+++ b/src/app/healthy/healthy.component.html
@@ -44,7 +44,8 @@
                                                         </p>
                                                         <p class="font-fam4 text-center" style="margin-top: -10px;">
                                                             ไม่อดของอร่อย ไม่หักโหม </p>
-                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">และเน้นที่การสอนความรู้ที่เข้าใจง่าย</p>
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">
+                                                            และเน้นที่การสอนความรู้ที่เข้าใจง่าย</p>
 
                                                         <!-- end text -->
                                                     </div>
@@ -121,8 +122,8 @@
                                                             style="font-weight: bolder; margin-top: 8px;">"Cadio
                                                             Dance"
                                                         </p>
-                                                        <p class="font-fam4 text-center"
-                                                            style="margin-top: -10px;">Get ready to
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">Get
+                                                            ready to
                                                             sweat yourself
                                                             sexy with The Fitness Marshall</p>
                                                         <!-- end text -->
@@ -282,8 +283,8 @@
                                                             style="font-weight: bolder; margin-top: 8px;">"Exercise And
                                                             Dance Workouts"</p>
                                                         <!-- 10 -->
-                                                        <p class="font-fam4 text-center"
-                                                            style="margin-top: -10px;">POPSUGAR
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">
+                                                            POPSUGAR
                                                             Fitness offers fresh fitness</p>
                                                         <!-- end text -->
                                                     </div>
@@ -444,8 +445,8 @@
                                                         <p class="font-fam2 text-center"
                                                             style="font-weight: bolder; margin-top: 8px;">"Yoga in home"
                                                         </p>
-                                                        <p class="font-fam4 text-center"
-                                                            style="margin-top: -10px;">Work up a sweat,
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">Work
+                                                            up a sweat,
                                                             or calm and relieve a tired mind and body</p>
                                                         <!-- end text -->
                                                     </div>
@@ -520,98 +521,88 @@
                 <br>
                 <div class="row">
                     <!-- 1 -->
-                    <div class="col-lg-3">
-                        <a href="https://www.youtube.com/watch?v=IkffiOUdqMw" target="_blank" data-toggle="tooltip"
-                            title="click here and go!">
-                            <div class="card">
-                                <div class="front2 bg">
-                                    <div class="cover">
-                                        <!-- หน้าปก -->
-                                        <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
-                                    </div>
-                                    <div class="content">
-                                        <div class="main">
-                                            <!-- start text -->
-                                            <p class="song-font">Matteo Lunetta Channel
-                                            </p>
-                                            <div class="text-center ">
-                                                <iframe class="img-font" src="https://www.youtube.com/embed/IkffiOUdqMw"
-                                                    allowfullscreen></iframe>
-                                            </div>
-                                            <p class="font-fam2 text-center title-small"
-                                                style="font-weight: bolder; margin-top: 5px;">
-                                                Song: "motivational workout rock music"
-                                            </p>
-                                            <br>
-                                            <!-- end text -->
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="front2 bg">
+                                <div class="cover">
+                                    <!-- หน้าปก -->
+                                    <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
+                                </div>
+                                <div class="content">
+                                    <div class="main">
+                                        <!-- start text -->
+                                        <p class="song-font">Matteo Lunetta Channel
+                                        </p>
+                                        <div class="text-center cover3">
+                                            <iframe src="https://www.youtube.com/embed/IkffiOUdqMw"
+                                                allowfullscreen></iframe>
                                         </div>
+                                        <p class="font-fam2 text-center title-small"
+                                            style="font-weight: bolder; margin-top: 65px;">
+                                            Song: "motivational workout rock music"
+                                        </p>
+                                        <!-- end text -->
                                     </div>
                                 </div>
-                                <!-- end front panel -->
                             </div>
-                        </a>
+                            <!-- end front panel -->
+                        </div>
                     </div>
                     <!-- 2 -->
-                    <div class="col-lg-3">
-                        <a href="https://www.youtube.com/watch?v=MWsRH57q3Pg" target="_blank" data-toggle="tooltip"
-                            title="click here and go!">
-                            <div class="card">
-                                <div class="front2 bg">
-                                    <div class="cover">
-                                        <!-- หน้าปก -->
-                                        <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
-                                    </div>
-                                    <div class="content">
-                                        <div class="main">
-                                            <!-- start text -->
-                                            <p class="song-font">BodyMix TV Channel
-                                            </p>
-                                            <div class="text-center ">
-                                                <iframe class="img-font" src="https://www.youtube.com/embed/MWsRH57q3Pg"
-                                                    allowfullscreen></iframe>
-                                            </div>
-                                            <p class="font-fam2 text-center title-small"
-                                                style="font-weight: bolder; margin-top: 5px;">
-                                                Song: "Best Workout Music 2019 🔥🔥 Gym Motivation Music #1"
-                                            </p>
-                                            <!-- end text -->
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="front2 bg">
+                                <div class="cover">
+                                    <!-- หน้าปก -->
+                                    <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
+                                </div>
+                                <div class="content">
+                                    <div class="main">
+                                        <!-- start text -->
+                                        <p class="song-font">BodyMix TV Channel
+                                        </p>
+                                        <div class="text-center cover3">
+                                            <iframe src="https://www.youtube.com/embed/MWsRH57q3Pg"
+                                                allowfullscreen></iframe>
                                         </div>
+                                        <p class="font-fam2 text-center title-small"
+                                            style="font-weight: bolder; margin-top: 65px;">
+                                            Song: "Best Workout Music 2019 🔥🔥 Gym Motivation Music #1"
+                                        </p>
+                                        <!-- end text -->
                                     </div>
                                 </div>
-                                <!-- end front panel -->
                             </div>
-                        </a>
+                            <!-- end front panel -->
+                        </div>
                     </div>
                     <!-- 3 -->
-                    <div class="col-lg-3">
-                        <a href="https://www.youtube.com/watch?v=99lIIjKsB0g" target="_blank" data-toggle="tooltip"
-                            title="click here and go!">
-                            <div class="card">
-                                <div class="front2 bg">
-                                    <div class="cover">
-                                        <!-- หน้าปก -->
-                                        <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
-                                    </div>
-                                    <div class="content" style="padding-left: 0px;padding-right: 0px;">
-                                        <div class="main">
-                                            <!-- start text -->
-                                            <p class="song-font" style="font-size: 23px;">Workout Music Service Channel</p>
-                                            <div class="text-center ">
-                                                <iframe class="img-font" src="https://www.youtube.com/embed/99lIIjKsB0g"
-                                                    allowfullscreen style="margin-top:1px;"></iframe>
-                                            </div>
-                                            <p class="font-fam2 text-center title-small"
-                                                style="font-weight: bolder; margin-top: 5px;">
-                                                Song: "Pump Up Songs 2018"
-                                            </p>
-                                            <br>
-                                            <!-- end text -->
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="front2 bg">
+                                <div class="cover">
+                                    <!-- หน้าปก -->
+                                    <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
+                                </div>
+                                <div class="content">
+                                    <div class="main">
+                                        <!-- start text -->
+                                        <p class="song-font">Workout Music Service Channel
+                                        </p>
+                                        <div class="text-center cover3">
+                                            <iframe src="https://www.youtube.com/embed/99lIIjKsB0g"
+                                                allowfullscreen></iframe>
                                         </div>
+                                        <p class="font-fam2 text-center title-small"
+                                            style="font-weight: bolder; margin-top: 65px;">
+                                            Song: "Pump Up Songs 2018"
+                                        </p>
+                                        <!-- end text -->
                                     </div>
                                 </div>
-                                <!-- end front panel -->
                             </div>
-                        </a>
+                            <!-- end front panel -->
+                        </div>
                     </div>
                 </div>
             </div>
