--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -5,10 +5,10 @@
       <div class="jumbotron">
         <p style="font-size:35px;">Song for Exercise - แนะนำเพลงสำหรับการออกกำลังกาย</p>
         <br>
-        
+
         <!-- 2 -->
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="card">
               <div class="front2 bg">
                 <div class="cover">
@@ -20,7 +20,7 @@
                     <!-- start text -->
                     <p class="song-font">Matteo Lunetta Channel
                     </p>
-                    <div class="text-center cover3">
+                    <div class="text-center cover2">
                       <iframe src="https://www.youtube.com/embed/IkffiOUdqMw" allowfullscreen></iframe>
                     </div>
                     <p class="font-fam2 text-center title-small" style="font-weight: bolder; margin-top: 65px;">
@@ -34,7 +34,7 @@
             </div>
           </div>
           <!-- 3------- -->
-          <div class="col-lg-4">
+          <div class="col-lg-3">
             <div class="card-container">
               <div class="card">
                 <div class="front bg">
@@ -45,14 +45,16 @@
                   <div class="content">
                     <div class="main">
                       <!-- start text -->
-                      <img src="../../assets/img2/healthy/fit-band.jpg" alt="fit logo" class="logo" />
-                      <p class="font-fam" style="margin-left: 35px;">Fitjunctions
-                      </p>
-                      <div class="text-center">
-                        <img src="../../assets/img2/healthy/fit-img.PNG" class="img-font" style="margin-top:8px;"
-                          alt="fit img">
+                      <div class="">
+                        <img src="../../assets/img2/healthy/fit-band.jpg" alt="fit logo" class="logo"/>
                       </div>
-                      <p class="font-fam2 text-center" style="font-weight: bolder; margin-top: 8px;">"หุ่นดี
+                      <p class="font-fam" style="margin-left: 50px;">Fitjunctions
+                      </p>
+
+                      <div class="text-center cover3">
+                        <img src="../../assets/img2/healthy/fit-img.PNG" alt="fit img">
+                      </div>
+                      <p class="font-fam2 text-center" style="font-weight: bolder; margin-top: 9%;">"หุ่นดี
                         แบบถูกวิธี"
                       </p>
                       <p class="font-fam4 text-center" style="margin-top: -10px;">
