--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,24 +1,27 @@
 .card .cover2 {
-  height: 105px;
-  overflow: inherit;
-  border-radius: 4px 4px 0 0;
-  }
-  
-  .card .cover2 img {
-  width: 100%;
-  }
-
-  .card .cover3 {
     height: 105px;
     overflow: unset;
     border-radius: 4px 4px 0 0;
     padding-left: 20px;
     padding-right: 20px;
-    }
+}
                                     
-  .card .cover3 iframe {
+.card .cover2 iframe {
     width: 100%;
-  }
+}
+
+.card .cover3 {
+  height: 50%;
+  overflow: unset;
+  border-radius: 4px 4px 0 0;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+                                  
+.card .cover3 img {
+  width: 100%;
+}
+
 //-------------------------------
 .set-margin {
   margin-left: auto;
@@ -30,7 +33,7 @@
   text-align: center;
   font-weight: bolder;
   color: white;
-  margin-top:-50px;
+  margin-top:-20px;
 }
 
 .card .font-fam2 { //หัวข้อ
@@ -55,15 +58,6 @@
   color: white;
 }
 
-.card .img-font {
-  width:255px;
-}
-
-.card .img-font2 {
-  width:280px;
-  margin-top: 10px;
-}
-
 .card .margin-auto {
   margin-left: auto;
   margin-right: auto;
@@ -75,8 +69,8 @@
 }
 
 .card .logo {
+  width: 70px;
   border-radius: 50%;
-  width: 100px;
   margin-top: -55px; //40
 }
 
@@ -227,7 +221,7 @@ background-color: #444444;
 }
 
 .card .cover {
-height: 105px;
+height: 90px;
 overflow: hidden;
 border-radius: 4px 4px 0 0;
 }
