--- a/src/app/what-bmi/what-bmi.component.html
+++ b/src/app/what-bmi/what-bmi.component.html
@@ -4,13 +4,13 @@
       <div class="jumbotron">
         <!-- บทความ -->
         <h1 class="display-4 text-center">BMI คืออะไร ?!</h1>
-        <p class="lead indent">
+        <p class="indent">
           Body Mass Index (BMI) หรือเรียกกันว่า ค่าดัชนีมวลร่างกาย คือ
           อัตราส่วนระหว่างน้ำหนักต่อส่วนสูงที่ใช้บ่งชี้ว่าอ้วนหรือผอมในผู้ใหญ่ตั้งแต่อายุ 20 ปีขึ้นไป
           สามารถทำได้โดยการชั่งน้ำหนักตัวเป็นกิโลกรัมและวัดส่วนสูงเป็นเซนติเมตร แล้วนำมาหาค่าดัชมีมวลกาย
           โดยมีสูตรการคำนวณ = น้ำหนักตัว[Kg] / (ส่วนสูง[cm] ยกกำลังสอง)
         </p>
-        <p class="lead indent">
+        <p class="indent">
           โดยประโยชน์ของการทราบค่า BMI ของตนเองนั้นสืบเนื่องมาจาก
           ในปัจจุบันปัญหาสุขภาพและภาวะน้ำหนักเกินนั้นสามารถพบได้เกือบทุกที่จึงเป็นปัจจัยเสี่ยงหรือเป็นสาเหตุให้เกิดโรคต่างๆที่ส่งผลถึงสุขภาพจนอาจเป็นสาเหตุให้เสียชีวิตได้
           เช่น โรคความดันโลหิตสูง โรคเบาหวาน โรคหัวใจขาดเลือด และโรคนิ่วในถุงน้ำดี
@@ -26,12 +26,12 @@
           </div>
         </div>
         <br>
-        <p class="lead ">ซึ่งเกณฑม์าตรฐานของดัชนีมวลกายของชาวเอเชีย มีดังนี้</p>
-        <p class="lead indent">- อ้วนมาก ( 30.0 ขึ้นไป )</p>
-        <p class="lead indent">- อ้วน ( 25.0 - 29.9 )</p>  
-        <p class="lead indent">- น้ำหนักเกิน ( 23.0 - 24.9 )</p>
-        <p class="lead indent">- น้ำหนักปกติ เหมาะสม ( 18.6 - 22.9 )</p>  
-        <p class="lead indent">- ผอมเกินไป ( น้อยกว่า 18.5 )</p>
+        <p class="">ซึ่งเกณฑม์าตรฐานของดัชนีมวลกายของชาวเอเชีย มีดังนี้</p>
+        <p class="indent">- อ้วนมาก ( 30.0 ขึ้นไป )</p>
+        <p class="indent">- อ้วน ( 25.0 - 29.9 )</p>  
+        <p class="indent">- น้ำหนักเกิน ( 23.0 - 24.9 )</p>
+        <p class="indent">- น้ำหนักปกติ เหมาะสม ( 18.6 - 22.9 )</p>  
+        <p class="indent">- ผอมเกินไป ( น้อยกว่า 18.5 )</p>
 
         <!-- end -->
 
